[package]
name = "ccp-bpf-cubic"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ebpf-ccp-cubic"
path = "src/main.rs"

[lib]
name = "ebpf_ccp_cubic"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.4", features = ["derive"] }
lazy_static = "1.5.0"
libbpf-rs = "0.25.0"
libbpf-sys = "1.6.2"
libccp = "1.2.0"
portus = "0.9.0"
tracing = "0.1.41"
tracing-subscriber = "0.3"
